--- a/Results/Table3.tex
+++ b/Results/Table3.tex
@@ -1,47 +1,131 @@
 {
 \def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi}
-\begin{tabular}{l*{9}{c}}
+\begin{tabular}{l*{4}{c}}
 \hline\hline
-            &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}&\multicolumn{1}{c}{(7)}&\multicolumn{1}{c}{(8)}&\multicolumn{1}{c}{(9)}\\
-            &\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}\\
+            &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}\\
+            &\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}\\
 \hline
-efw\_colonizer&       0.716\sym{***}&       0.606\sym{**} &       0.282         &       0.650\sym{***}&       0.456\sym{**} &       0.575\sym{***}&       0.615\sym{***}&       0.626\sym{***}&       0.706\sym{***}\\
-            &     (0.193)         &     (0.240)         &     (0.278)         &     (0.203)         &     (0.193)         &     (0.183)         &     (0.175)         &     (0.177)         &     (0.197)         \\
+efw\_colonizer&       0.716\sym{***}&       0.521\sym{**} &       1.199\sym{***}&       1.648\sym{***}\\
+            &     (0.153)         &     (0.206)         &     (0.176)         &     (0.206)         \\
 [1em]
-america     &                     &                     &                     &                     &      -0.574         &                     &                     &                     &                     \\
-            &                     &                     &                     &                     &     (0.569)         &                     &                     &                     &                     \\
+america     &                     &      0.0338         &      -0.595         &       0.242         \\
+            &                     &     (0.125)         &     (1.052)         &     (1.667)         \\
 [1em]
-africa      &                     &                     &                     &                     &      -1.336\sym{**} &                     &                     &                     &                     \\
-            &                     &                     &                     &                     &     (0.562)         &                     &                     &                     &                     \\
+africa      &                     &      -0.327         &      -0.532         &       1.022         \\
+            &                     &     (0.273)         &     (1.083)         &     (2.297)         \\
 [1em]
-asia        &                     &                     &                     &                     &      -0.772         &                     &                     &                     &                     \\
-            &                     &                     &                     &                     &     (0.566)         &                     &                     &                     &                     \\
+asia        &                     &      -0.137         &      -1.021         &      0.0103         \\
+            &                     &     (0.110)         &     (1.243)         &     (2.070)         \\
 [1em]
-lat\_abst    &                     &                     &                     &                     &                     &                     &       1.263         &                     &                     \\
-            &                     &                     &                     &                     &                     &                     &     (0.939)         &                     &                     \\
+lat\_abst    &                     &       1.082\sym{*}  &      -5.296\sym{***}&      -2.267         \\
+            &                     &     (0.489)         &     (0.709)         &     (1.227)         \\
 [1em]
-landlock    &                     &                     &                     &                     &                     &                     &       0.306         &                     &                     \\
-            &                     &                     &                     &                     &                     &                     &     (0.203)         &                     &                     \\
+landlock    &                     &       0.339         &       0.782\sym{**} &       1.134\sym{**} \\
+            &                     &     (0.292)         &     (0.217)         &     (0.334)         \\
 [1em]
-island      &                     &                     &                     &                     &                     &                     &       1.075\sym{***}&                     &                     \\
-            &                     &                     &                     &                     &                     &                     &     (0.240)         &                     &                     \\
+island      &                     &       0.959\sym{***}&       1.562\sym{***}&       1.565\sym{***}\\
+            &                     &     (0.219)         &     (0.255)         &     (0.197)         \\
 [1em]
-first       &                     &                     &                     &                     &                     &                     &                     &    -0.00180\sym{***}&                     \\
-            &                     &                     &                     &                     &                     &                     &                     &  (0.000618)         &                     \\
+ruggedness  &                     &                     &   -0.000917         &    0.000340         \\
+            &                     &                     &   (0.00154)         &   (0.00231)         \\
 [1em]
-year\_independence&                     &                     &                     &                     &                     &                     &                     &    -0.00540         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &   (0.00505)         &                     \\
+logem4      &                     &                     &      -0.164         &      -0.388\sym{***}\\
+            &                     &                     &     (0.164)         &    (0.0592)         \\
 [1em]
-multiple    &                     &                     &                     &                     &                     &                     &                     &                     &       0.152         \\
-            &                     &                     &                     &                     &                     &                     &                     &                     &     (0.179)         \\
+lpd1500s    &                     &                     &     -0.0582         &    0.000869         \\
+            &                     &                     &     (0.211)         &     (0.295)         \\
 [1em]
-\_cons      &       0.984         &       1.630         &       4.618\sym{**} &       1.433         &       3.964\sym{**} &       1.982         &       1.148         &       15.48         &       1.018         \\
-            &     (1.436)         &     (1.759)         &     (2.086)         &     (1.497)         &     (1.666)         &     (1.367)         &     (1.311)         &     (10.16)         &     (1.457)         \\
+humid1      &                     &                     &     -0.0135         &    -0.00682         \\
+            &                     &                     &    (0.0128)         &    (0.0282)         \\
+[1em]
+humid2      &                     &                     &      0.0626\sym{***}&      0.0631\sym{*}  \\
+            &                     &                     &   (0.00488)         &    (0.0274)         \\
+[1em]
+humid3      &                     &                     &      0.0404         &      0.0397         \\
+            &                     &                     &    (0.0195)         &    (0.0272)         \\
+[1em]
+humid4      &                     &                     &   -0.000376         &      0.0198         \\
+            &                     &                     &    (0.0135)         &    (0.0170)         \\
+[1em]
+temp1       &                     &                     &      -0.203\sym{*}  &      -0.284\sym{*}  \\
+            &                     &                     &    (0.0920)         &     (0.110)         \\
+[1em]
+temp2       &                     &                     &     -0.0946\sym{**} &     -0.0312         \\
+            &                     &                     &    (0.0301)         &    (0.0321)         \\
+[1em]
+temp3       &                     &                     &       0.234\sym{**} &       0.233\sym{***}\\
+            &                     &                     &    (0.0527)         &    (0.0501)         \\
+[1em]
+temp4       &                     &                     &     -0.0103         &     0.00826         \\
+            &                     &                     &   (0.00612)         &    (0.0326)         \\
+[1em]
+temp5       &                     &                     &      0.0753\sym{*}  &       0.116         \\
+            &                     &                     &    (0.0298)         &    (0.0597)         \\
+[1em]
+steplow     &                     &                     &       0.101         &      0.0701         \\
+            &                     &                     &     (0.249)         &     (0.313)         \\
+[1em]
+deslow      &                     &                     &       0.104         &       0.425         \\
+            &                     &                     &     (0.511)         &     (0.289)         \\
+[1em]
+stepmid     &                     &                     &       1.124         &      -1.107         \\
+            &                     &                     &     (2.878)         &     (3.885)         \\
+[1em]
+desmid      &                     &                     &           0         &           0         \\
+            &                     &                     &         (.)         &         (.)         \\
+[1em]
+drystep     &                     &                     &      -0.144         &      -0.164         \\
+            &                     &                     &     (0.116)         &     (0.159)         \\
+[1em]
+hiland      &                     &                     &           0         &           0         \\
+            &                     &                     &         (.)         &         (.)         \\
+[1em]
+drywint     &                     &                     &       15.48         &      -1.915         \\
+            &                     &                     &     (24.38)         &     (23.61)         \\
+[1em]
+goldm       &                     &                     &      -0.331         &      0.0139         \\
+            &                     &                     &     (0.519)         &     (0.525)         \\
+[1em]
+iron        &                     &                     &      -0.136\sym{**} &      -0.114         \\
+            &                     &                     &    (0.0452)         &    (0.0942)         \\
+[1em]
+silv        &                     &                     &           0         &           0         \\
+            &                     &                     &         (.)         &         (.)         \\
+[1em]
+zinc        &                     &                     &           0         &           0         \\
+            &                     &                     &         (.)         &         (.)         \\
+[1em]
+oilres      &                     &                     & -0.00000137         &-0.000000856         \\
+            &                     &                     &(0.000000848)         &(0.000000791)         \\
+[1em]
+2.colonizer &                     &                     &           0         &           0         \\
+            &                     &                     &         (.)         &         (.)         \\
+[1em]
+3.colonizer &                     &                     &      -0.243         &       0.997\sym{*}  \\
+            &                     &                     &     (0.333)         &     (0.439)         \\
+[1em]
+4.colonizer &                     &                     &       0.486         &       1.437         \\
+            &                     &                     &     (0.605)         &     (0.712)         \\
+[1em]
+6.colonizer &                     &                     &      -0.871\sym{**} &       0.469         \\
+            &                     &                     &     (0.237)         &     (0.578)         \\
+[1em]
+7.colonizer &                     &                     &       0.175         &       1.598\sym{***}\\
+            &                     &                     &     (0.563)         &     (0.271)         \\
+[1em]
+legor\_fr    &                     &                     &                     &       0.371         \\
+            &                     &                     &                     &     (0.974)         \\
+[1em]
+legor\_uk    &                     &                     &                     &       1.628\sym{**} \\
+            &                     &                     &                     &     (0.486)         \\
+[1em]
+\_cons      &       0.984         &       2.129         &      -9.555\sym{*}  &      -18.16\sym{***}\\
+            &     (1.150)         &     (1.706)         &     (4.259)         &     (2.588)         \\
 \hline
-\(N\)       &          87         &          58         &          39         &          79         &          87         &          84         &          70         &          87         &          87         \\
-\(R^{2}\)   &       0.154         &       0.099         &       0.024         &       0.130         &       0.283         &       0.111         &       0.422         &       0.225         &       0.159         \\
+\(N\)       &          87         &          70         &          53         &          53         \\
+\(R^{2}\)   &       0.154         &       0.435         &       0.793         &       0.837         \\
 \hline\hline
-\multicolumn{10}{l}{\footnotesize Standard errors in parentheses}\\
-\multicolumn{10}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
+\multicolumn{5}{l}{\footnotesize Standard errors in parentheses}\\
+\multicolumn{5}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
 \end{tabular}
 }
