--- a/Results/Table6.tex
+++ b/Results/Table6.tex
@@ -1,119 +1,194 @@
 {
 \def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi}
-\begin{tabular}{l*{9}{c}}
+\begin{tabular}{l*{6}{c}}
 \hline\hline
-            &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}&\multicolumn{1}{c}{(7)}&\multicolumn{1}{c}{(8)}&\multicolumn{1}{c}{(9)}\\
-            &\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}\\
+            &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}\\
+            &\multicolumn{1}{c}{efw}&\multicolumn{1}{c}{efw}&\multicolumn{1}{c}{efw}&\multicolumn{1}{c}{efw}&\multicolumn{1}{c}{efw}&\multicolumn{1}{c}{efw}\\
 \hline
-centuries   &       0.313\sym{***}&       0.195\sym{*}  &       0.267\sym{*}  &      0.0429         &      0.0998         &       0.208         &       0.141         &      0.0259         &       0.244\sym{*}  \\
-            &     (0.104)         &     (0.115)         &     (0.131)         &     (0.160)         &     (0.104)         &     (0.127)         &     (0.111)         &     (0.174)         &     (0.123)         \\
+hiel\_indep  &     -0.0185         &     -0.0427         &       0.404\sym{**} &                     &                     &                     \\
+            &     (0.342)         &     (0.364)         &     (0.138)         &                     &                     &                     \\
 [1em]
-1.colonizer &                     &           0         &                     &           0         &           0         &           0         &                     &                     &                     \\
-            &                     &         (.)         &                     &         (.)         &         (.)         &         (.)         &                     &                     &                     \\
+time        &     0.00293         &      0.0117         &      0.0269\sym{*}  &      0.0494         &      0.0228         &      0.0169         \\
+            &    (0.0224)         &    (0.0146)         &    (0.0124)         &    (0.0362)         &    (0.0250)         &    (0.0212)         \\
 [1em]
-2.colonizer &                     &       1.504\sym{***}&           0         &       1.496\sym{***}&       0.891\sym{***}&       1.501\sym{***}&           0         &           0         &           0         \\
-            &                     &     (0.196)         &         (.)         &     (0.204)         &     (0.171)         &     (0.200)         &         (.)         &         (.)         &         (.)         \\
+c.hiel\_indep#c.time&     0.00316         &     0.00190         &  0.00000763         &                     &                     &                     \\
+            &   (0.00313)         &   (0.00209)         &   (0.00153)         &                     &                     &                     \\
 [1em]
-3.colonizer &                     &       0.488\sym{**} &       0.101         &       0.508\sym{***}&       0.333\sym{**} &       0.474\sym{***}&      -1.050\sym{***}&      -1.496\sym{***}&      -1.161\sym{***}\\
-            &                     &     (0.184)         &     (0.394)         &     (0.178)         &     (0.124)         &     (0.172)         &     (0.202)         &     (0.375)         &     (0.258)         \\
+year\_independence&      0.0121\sym{***}&      0.0147\sym{***}&      0.0228\sym{***}&      0.0155\sym{***}&      0.0156\sym{***}&      0.0209\sym{*}  \\
+            &   (0.00159)         &   (0.00169)         &   (0.00351)         &   (0.00321)         &   (0.00284)         &   (0.00901)         \\
 [1em]
-4.colonizer &                     &       0.592         &                     &       0.599         &       0.596         &       0.601         &      -0.692         &      -0.621         &      -0.829\sym{*}  \\
-            &                     &     (0.384)         &                     &     (0.400)         &     (0.405)         &     (0.387)         &     (0.459)         &     (0.492)         &     (0.459)         \\
+1950.year   &           0         &           0         &           0         &           0         &           0         &           0         \\
+            &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         \\
 [1em]
-6.colonizer &                     &       0.553         &      -1.407\sym{**} &       0.271         &      -0.422         &       0.507         &      -1.014         &      -1.034         &      -0.985\sym{*}  \\
-            &                     &     (0.581)         &     (0.573)         &     (0.410)         &     (0.476)         &     (0.634)         &     (0.862)         &     (0.787)         &     (0.580)         \\
+1955.year   &     -0.0100         &    -0.00378         &     -0.0371         &    -0.00545         &    -0.00540         &     -0.0382         \\
+            &    (0.0540)         &    (0.0477)         &    (0.0751)         &    (0.0469)         &    (0.0471)         &    (0.0705)         \\
 [1em]
-america     &                     &                     &                     &                     &       0.265         &                     &                     &                     &                     \\
-            &                     &                     &                     &                     &     (0.381)         &                     &                     &                     &                     \\
+1960.year   &       0.127         &       0.131         &       0.147\sym{*}  &       0.134         &       0.139         &       0.143\sym{*}  \\
+            &    (0.0944)         &    (0.0878)         &    (0.0594)         &    (0.0983)         &    (0.0907)         &    (0.0598)         \\
 [1em]
-africa      &                     &                     &                     &                     &      -1.100\sym{***}&                     &                     &                     &                     \\
-            &                     &                     &                     &                     &     (0.160)         &                     &                     &                     &                     \\
+1965.year   &      0.0667         &      0.0684         &      0.0952         &      0.0890         &       0.107         &       0.113         \\
+            &    (0.0977)         &    (0.0925)         &    (0.0775)         &     (0.105)         &     (0.105)         &     (0.102)         \\
 [1em]
-asia        &                     &                     &                     &                     &     -0.0365         &                     &                     &                     &                     \\
-            &                     &                     &                     &                     &     (0.271)         &                     &                     &                     &                     \\
+1970.year   &      0.0272         &     0.00733         &      0.0581         &     -0.0355         &     0.00263         &      0.0575         \\
+            &    (0.0740)         &    (0.0420)         &     (0.105)         &     (0.117)         &     (0.117)         &     (0.156)         \\
 [1em]
-year\_independence&                     &                     &                     &                     &                     &    -0.00642         &                     &                     &                     \\
-            &                     &                     &                     &                     &                     &    (0.0177)         &                     &                     &                     \\
+1975.year   &      -0.327         &      -0.386\sym{*}  &      -0.399         &      -0.413\sym{*}  &      -0.395\sym{*}  &      -0.402         \\
+            &     (0.172)         &     (0.157)         &     (0.219)         &     (0.175)         &     (0.171)         &     (0.241)         \\
 [1em]
-lat\_abst    &                     &                     &                     &                     &                     &                     &      -0.283         &                     &                     \\
-            &                     &                     &                     &                     &                     &                     &     (1.163)         &                     &                     \\
+1980.year   &      -0.361\sym{***}&      -0.412\sym{***}&      -0.399\sym{**} &      -0.439\sym{***}&      -0.424\sym{***}&      -0.400\sym{**} \\
+            &    (0.0728)         &    (0.0645)         &     (0.122)         &    (0.0823)         &    (0.0747)         &     (0.127)         \\
 [1em]
-landlock    &                     &                     &                     &                     &                     &                     &      -0.129         &                     &                     \\
-            &                     &                     &                     &                     &                     &                     &     (0.234)         &                     &                     \\
+1985.year   &      -0.349\sym{***}&      -0.396\sym{***}&      -0.418\sym{**} &      -0.422\sym{***}&      -0.408\sym{***}&      -0.419\sym{**} \\
+            &    (0.0803)         &    (0.0737)         &     (0.161)         &    (0.0808)         &    (0.0739)         &     (0.159)         \\
 [1em]
-island      &                     &                     &                     &                     &                     &                     &       0.768\sym{**} &                     &                     \\
-            &                     &                     &                     &                     &                     &                     &     (0.341)         &                     &                     \\
+1990.year   &      -0.312\sym{**} &      -0.356\sym{**} &      -0.338\sym{*}  &      -0.372\sym{***}&      -0.370\sym{***}&      -0.348\sym{*}  \\
+            &    (0.0926)         &    (0.0886)         &     (0.143)         &     (0.105)         &    (0.0977)         &     (0.156)         \\
 [1em]
-humid1      &                     &                     &                     &                     &                     &                     &                     &     0.00129         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0190)         &                     \\
+1995.year   &     -0.0597         &     -0.0992         &      -0.130         &      -0.116         &      -0.114         &      -0.140         \\
+            &     (0.138)         &     (0.147)         &     (0.115)         &     (0.127)         &     (0.125)         &    (0.0843)         \\
 [1em]
-humid2      &                     &                     &                     &                     &                     &                     &                     &     0.00503         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0305)         &                     \\
+2000.year   &       0.175         &       0.140         &       0.130\sym{*}  &       0.123         &       0.125         &       0.121\sym{**} \\
+            &    (0.0879)         &    (0.0951)         &    (0.0541)         &    (0.0895)         &    (0.0861)         &    (0.0430)         \\
 [1em]
-humid3      &                     &                     &                     &                     &                     &                     &                     &      0.0209         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0215)         &                     \\
+2001.year   &       0.147\sym{*}  &       0.113         &      0.0946\sym{**} &      0.0953         &      0.0980         &      0.0852\sym{**} \\
+            &    (0.0686)         &    (0.0750)         &    (0.0352)         &    (0.0713)         &    (0.0675)         &    (0.0299)         \\
 [1em]
-humid4      &                     &                     &                     &                     &                     &                     &                     &     -0.0226         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0262)         &                     \\
+2002.year   &       0.168\sym{*}  &       0.135         &      0.0933         &       0.117         &       0.120         &      0.0839\sym{**} \\
+            &    (0.0835)         &    (0.0906)         &    (0.0466)         &    (0.0829)         &    (0.0821)         &    (0.0339)         \\
 [1em]
-temp1       &                     &                     &                     &                     &                     &                     &                     &       0.152         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &     (0.148)         &                     \\
+2003.year   &       0.166\sym{*}  &       0.148         &       0.112\sym{**} &       0.129\sym{*}  &       0.132\sym{*}  &      0.0981\sym{***}\\
+            &    (0.0790)         &    (0.0802)         &    (0.0339)         &    (0.0680)         &    (0.0674)         &    (0.0211)         \\
 [1em]
-temp2       &                     &                     &                     &                     &                     &                     &                     &      0.0297         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0510)         &                     \\
+2004.year   &       0.145         &       0.129         &      0.0755\sym{*}  &       0.110         &       0.113         &      0.0621\sym{**} \\
+            &    (0.0815)         &    (0.0822)         &    (0.0347)         &    (0.0698)         &    (0.0694)         &    (0.0212)         \\
 [1em]
-temp3       &                     &                     &                     &                     &                     &                     &                     &    -0.00470         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0654)         &                     \\
+2005.year   &       0.204         &       0.195         &       0.153         &       0.189         &       0.186         &       0.149         \\
+            &     (0.130)         &     (0.129)         &    (0.0975)         &     (0.114)         &     (0.119)         &    (0.0859)         \\
 [1em]
-temp4       &                     &                     &                     &                     &                     &                     &                     &     -0.0600         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0624)         &                     \\
+2006.year   &       0.240         &       0.232         &       0.191         &       0.226\sym{*}  &       0.223\sym{*}  &       0.187\sym{*}  \\
+            &     (0.127)         &     (0.126)         &    (0.0981)         &     (0.110)         &     (0.116)         &    (0.0867)         \\
 [1em]
-temp5       &                     &                     &                     &                     &                     &                     &                     &      0.0232         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0418)         &                     \\
+2007.year   &       0.243         &       0.235         &       0.178         &       0.229         &       0.226         &       0.175         \\
+            &     (0.147)         &     (0.146)         &     (0.117)         &     (0.132)         &     (0.138)         &     (0.108)         \\
 [1em]
-steplow     &                     &                     &                     &                     &                     &                     &                     &     0.00708         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &     (0.376)         &                     \\
+2008.year   &       0.191         &       0.185         &       0.133         &       0.178         &       0.176         &       0.130         \\
+            &     (0.157)         &     (0.155)         &     (0.129)         &     (0.141)         &     (0.148)         &     (0.120)         \\
 [1em]
-deslow      &                     &                     &                     &                     &                     &                     &                     &    -0.00362         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &     (0.504)         &                     \\
+2009.year   &       0.204         &       0.198         &       0.159         &       0.191         &       0.189         &       0.156         \\
+            &     (0.132)         &     (0.131)         &     (0.109)         &     (0.112)         &     (0.118)         &    (0.0939)         \\
 [1em]
-stepmid     &                     &                     &                     &                     &                     &                     &                     &           0         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &         (.)         &                     \\
+2010.year   &       0.294\sym{**} &       0.284\sym{**} &       0.189         &       0.285\sym{***}&       0.267\sym{**} &       0.180         \\
+            &    (0.0974)         &     (0.106)         &     (0.127)         &    (0.0787)         &    (0.0920)         &     (0.115)         \\
 [1em]
-desmid      &                     &                     &                     &                     &                     &                     &                     &           0         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &         (.)         &                     \\
+2011.year   &       0.264\sym{*}  &       0.253         &       0.167         &       0.249\sym{**} &       0.234\sym{*}  &       0.154         \\
+            &     (0.123)         &     (0.131)         &     (0.152)         &     (0.102)         &     (0.113)         &     (0.139)         \\
 [1em]
-drystep     &                     &                     &                     &                     &                     &                     &                     &      -0.561         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &     (0.339)         &                     \\
+2012.year   &       0.256         &       0.246         &       0.174         &       0.242\sym{*}  &       0.226         &       0.161         \\
+            &     (0.139)         &     (0.148)         &     (0.157)         &     (0.122)         &     (0.133)         &     (0.149)         \\
 [1em]
-hiland      &                     &                     &                     &                     &                     &                     &                     &           0         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &         (.)         &                     \\
+2013.year   &       0.237         &       0.229         &       0.183         &       0.234\sym{*}  &       0.233         &       0.186         \\
+            &     (0.125)         &     (0.132)         &     (0.143)         &     (0.119)         &     (0.128)         &     (0.144)         \\
 [1em]
-drywint     &                     &                     &                     &                     &                     &                     &                     &           0         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &         (.)         &                     \\
+2014.year   &       0.235\sym{*}  &       0.228         &       0.170         &       0.232\sym{*}  &       0.232\sym{*}  &       0.173         \\
+            &     (0.108)         &     (0.115)         &     (0.126)         &     (0.105)         &     (0.114)         &     (0.130)         \\
 [1em]
-goldm       &                     &                     &                     &                     &                     &                     &                     &                     &           0         \\
-            &                     &                     &                     &                     &                     &                     &                     &                     &         (.)         \\
+2015.year   &       0.226\sym{*}  &       0.219         &       0.161         &       0.223\sym{*}  &       0.223\sym{*}  &       0.164         \\
+            &     (0.110)         &     (0.117)         &     (0.132)         &     (0.106)         &     (0.115)         &     (0.136)         \\
 [1em]
-iron        &                     &                     &                     &                     &                     &                     &                     &                     &      0.0674\sym{*}  \\
-            &                     &                     &                     &                     &                     &                     &                     &                     &    (0.0396)         \\
+2016.year   &       0.191\sym{**} &       0.179\sym{**} &       0.150         &       0.188\sym{***}&       0.181\sym{**} &       0.152\sym{*}  \\
+            &    (0.0483)         &    (0.0558)         &    (0.0751)         &    (0.0446)         &    (0.0525)         &    (0.0779)         \\
 [1em]
-silv        &                     &                     &                     &                     &                     &                     &                     &                     &           0         \\
-            &                     &                     &                     &                     &                     &                     &                     &                     &         (.)         \\
+2017.year   &      0.0874         &      0.0761         &      0.0614         &      0.0843         &      0.0778         &      0.0636         \\
+            &    (0.0452)         &    (0.0506)         &    (0.0633)         &    (0.0485)         &    (0.0548)         &    (0.0738)         \\
 [1em]
-zinc        &                     &                     &                     &                     &                     &                     &                     &                     &           0         \\
-            &                     &                     &                     &                     &                     &                     &                     &                     &         (.)         \\
+2018.year   &       0.129\sym{***}&       0.118\sym{**} &       0.107\sym{*}  &       0.126\sym{***}&       0.120\sym{**} &       0.109\sym{*}  \\
+            &    (0.0264)         &    (0.0309)         &    (0.0466)         &    (0.0293)         &    (0.0346)         &    (0.0558)         \\
 [1em]
-oilres      &                     &                     &                     &                     &                     &                     &                     &                     &-0.000000446         \\
-            &                     &                     &                     &                     &                     &                     &                     &                     &(0.000000486)         \\
+2019.year   &       0.119\sym{***}&       0.118\sym{***}&      0.0912\sym{***}&       0.119\sym{***}&       0.119\sym{***}&      0.0910\sym{**} \\
+            &    (0.0135)         &    (0.0133)         &    (0.0200)         &    (0.0139)         &    (0.0139)         &    (0.0262)         \\
 [1em]
-\_cons      &       4.748\sym{***}&       3.894\sym{***}&       5.618\sym{***}&       4.008\sym{***}&       5.066\sym{***}&       16.46         &       5.267\sym{***}&       1.511         &       5.281\sym{***}\\
-            &     (0.177)         &    (0.0865)         &     (0.380)         &     (0.120)         &     (0.149)         &     (34.73)         &     (0.309)         &     (2.163)         &     (0.287)         \\
+2020.year   &           0         &           0         &           0         &           0         &           0         &           0         \\
+            &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         \\
+[1em]
+1.colonizer\_indep&                     &           0         &           0         &                     &                     &                     \\
+            &                     &         (.)         &         (.)         &                     &                     &                     \\
+[1em]
+2.colonizer\_indep&                     &       1.047\sym{**} &      0.0160         &                     &                     &                     \\
+            &                     &     (0.265)         &     (0.103)         &                     &                     &                     \\
+[1em]
+3.colonizer\_indep&                     &       0.171         &      -0.508\sym{**} &                     &                     &                     \\
+            &                     &     (0.355)         &     (0.142)         &                     &                     &                     \\
+[1em]
+4.colonizer\_indep&                     &       0.954\sym{***}&      -0.681\sym{**} &                     &                     &                     \\
+            &                     &     (0.114)         &     (0.209)         &                     &                     &                     \\
+[1em]
+5.colonizer\_indep&                     &       0.200         &      -0.203         &                     &                     &                     \\
+            &                     &     (0.502)         &     (0.152)         &                     &                     &                     \\
+[1em]
+6.colonizer\_indep&                     &       0.795         &       0.708\sym{**} &                     &                     &                     \\
+            &                     &     (0.598)         &     (0.269)         &                     &                     &                     \\
+[1em]
+america     &                     &                     &      0.0359         &                     &                     &     -0.0595         \\
+            &                     &                     &     (0.185)         &                     &                     &     (0.247)         \\
+[1em]
+africa      &                     &                     &      -0.300         &                     &                     &      -0.384         \\
+            &                     &                     &     (0.320)         &                     &                     &     (0.330)         \\
+[1em]
+asia        &                     &                     &       0.326         &                     &                     &      -0.102         \\
+            &                     &                     &     (0.345)         &                     &                     &     (0.303)         \\
+[1em]
+lat\_abst    &                     &                     &       0.869\sym{**} &                     &                     &       0.642         \\
+            &                     &                     &     (0.274)         &                     &                     &     (0.677)         \\
+[1em]
+landlock    &                     &                     &       0.189         &                     &                     &       0.111         \\
+            &                     &                     &     (0.248)         &                     &                     &     (0.270)         \\
+[1em]
+island      &                     &                     &       0.840\sym{**} &                     &                     &       0.859\sym{***}\\
+            &                     &                     &     (0.218)         &                     &                     &     (0.230)         \\
+[1em]
+ruggedness  &                     &                     &   -0.000521         &                     &                     &   -0.000115         \\
+            &                     &                     &  (0.000887)         &                     &                     &  (0.000860)         \\
+[1em]
+lpd1500s    &                     &                     &      -0.143\sym{***}&                     &                     &      -0.155\sym{**} \\
+            &                     &                     &    (0.0300)         &                     &                     &    (0.0429)         \\
+[1em]
+efw\_colonizer&                     &                     &                     &       0.860\sym{**} &     -0.0732         &      -0.216         \\
+            &                     &                     &                     &     (0.254)         &     (0.264)         &     (0.243)         \\
+[1em]
+c.efw\_colonizer#c.time&                     &                     &                     &    -0.00306         &    0.000458         &     0.00133         \\
+            &                     &                     &                     &   (0.00502)         &   (0.00351)         &   (0.00314)         \\
+[1em]
+1.colonizer &                     &                     &                     &                     &           0         &                     \\
+            &                     &                     &                     &                     &         (.)         &                     \\
+[1em]
+2.colonizer &                     &                     &                     &                     &       1.695\sym{***}&           0         \\
+            &                     &                     &                     &                     &    (0.0383)         &         (.)         \\
+[1em]
+3.colonizer &                     &                     &                     &                     &       0.743\sym{***}&      -0.631\sym{***}\\
+            &                     &                     &                     &                     &    (0.0559)         &     (0.147)         \\
+[1em]
+4.colonizer &                     &                     &                     &                     &       0.960\sym{***}&     0.00415         \\
+            &                     &                     &                     &                     &   (0.00661)         &    (0.0724)         \\
+[1em]
+5.colonizer &                     &                     &                     &                     &      -0.462\sym{***}&      -1.495\sym{***}\\
+            &                     &                     &                     &                     &     (0.114)         &     (0.315)         \\
+[1em]
+6.colonizer &                     &                     &                     &                     &       1.576\sym{***}&      -0.381\sym{*}  \\
+            &                     &                     &                     &                     &    (0.0630)         &     (0.163)         \\
+[1em]
+7.colonizer &                     &                     &                     &                     &       0.678\sym{***}&      -0.926\sym{**} \\
+            &                     &                     &                     &                     &     (0.172)         &     (0.329)         \\
+[1em]
+8.colonizer &                     &                     &                     &                     &       1.378\sym{***}&       0.149         \\
+            &                     &                     &                     &                     &     (0.166)         &     (0.421)         \\
+[1em]
+\_cons      &      -18.90\sym{***}&      -24.49\sym{***}&      -42.90\sym{***}&      -32.01\sym{***}&      -26.54\sym{***}&      -34.32\sym{*}  \\
+            &     (4.621)         &     (3.002)         &     (6.142)         &     (5.593)         &     (4.826)         &     (17.00)         \\
 \hline
-\(N\)       &          54         &          54         &          22         &          48         &          54         &          54         &          45         &          45         &          45         \\
-\(R^{2}\)   &       0.140         &       0.386         &       0.278         &       0.306         &       0.604         &       0.388         &       0.600         &       0.657         &       0.520         \\
+\(N\)       &        2124         &        2124         &        1702         &        2124         &        2124         &        1702         \\
+\(R^{2}\)   &       0.343         &       0.462         &       0.673         &       0.416         &       0.481         &       0.660         \\
 \hline\hline
-\multicolumn{10}{l}{\footnotesize Standard errors in parentheses}\\
-\multicolumn{10}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
+\multicolumn{7}{l}{\footnotesize Standard errors in parentheses}\\
+\multicolumn{7}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
 \end{tabular}
 }
