--- a/Results/Table5.tex
+++ b/Results/Table5.tex
@@ -1,47 +1,104 @@
 {
 \def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi}
-\begin{tabular}{l*{8}{c}}
+\begin{tabular}{l*{5}{c}}
 \hline\hline
-            &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}&\multicolumn{1}{c}{(7)}&\multicolumn{1}{c}{(8)}\\
-            &\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}\\
+            &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}\\
+            &\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}\\
 \hline
-efw\_colonizer&       1.106\sym{***}&       0.521         &       0.426         &       0.872\sym{**} &       0.483\sym{*}  &       1.088\sym{***}&       0.777\sym{*}  &       1.089\sym{***}\\
-            &     (0.373)         &     (0.393)         &     (0.402)         &     (0.384)         &     (0.282)         &     (0.355)         &     (0.393)         &     (0.366)         \\
+first\_hiel  &       0.280         &      -0.174         &                     &                     &                     \\
+            &     (0.241)         &     (0.466)         &                     &                     &                     \\
 [1em]
-america     &                     &                     &                     &                     &       0.319         &                     &                     &                     \\
-            &                     &                     &                     &                     &     (0.252)         &                     &                     &                     \\
+first\_hiel\_year&     -0.0284\sym{**} &     -0.0374\sym{**} &                     &                     &                     \\
+            &    (0.0103)         &    (0.0103)         &                     &                     &                     \\
 [1em]
-africa      &                     &                     &                     &                     &      -1.197\sym{***}&                     &                     &                     \\
-            &                     &                     &                     &                     &     (0.169)         &                     &                     &                     \\
+america     &           0         &           0         &     -0.0538         &     -0.0635         &      -0.130         \\
+            &         (.)         &         (.)         &     (0.206)         &     (0.181)         &     (0.219)         \\
 [1em]
-asia        &                     &                     &                     &                     &     -0.0967         &                     &                     &                     \\
-            &                     &                     &                     &                     &     (0.275)         &                     &                     &                     \\
+africa      &           0         &      -0.150         &      -0.360         &      -0.376         &      -0.431         \\
+            &         (.)         &     (0.504)         &     (0.326)         &     (0.270)         &     (0.345)         \\
 [1em]
-lat\_abst    &                     &                     &                     &                     &                     &       0.652         &                     &                     \\
-            &                     &                     &                     &                     &                     &     (1.272)         &                     &                     \\
+asia        &      -0.298         &           0         &      0.0515         &     -0.0295         &      0.0797         \\
+            &     (0.327)         &         (.)         &     (0.301)         &     (0.201)         &     (0.349)         \\
 [1em]
-landlock    &                     &                     &                     &                     &                     &     -0.0901         &                     &                     \\
-            &                     &                     &                     &                     &                     &     (0.248)         &                     &                     \\
+lat\_abst    &      0.0592         &      -0.119         &       0.163         &      0.0952         &       0.423         \\
+            &     (2.281)         &     (3.983)         &     (0.559)         &     (0.685)         &     (0.450)         \\
 [1em]
-island      &                     &                     &                     &                     &                     &       0.905\sym{**} &                     &                     \\
-            &                     &                     &                     &                     &                     &     (0.370)         &                     &                     \\
+landlock    &       0.645         &       1.314\sym{***}&       0.341         &       0.342         &       0.329         \\
+            &     (0.457)         &     (0.277)         &     (0.433)         &     (0.426)         &     (0.430)         \\
 [1em]
-first       &                     &                     &                     &                     &                     &                     &    -0.00213\sym{*}  &                     \\
-            &                     &                     &                     &                     &                     &                     &   (0.00117)         &                     \\
+island      &       0.379         &       1.529\sym{***}&       0.974\sym{***}&       0.990\sym{***}&       0.950\sym{***}\\
+            &     (0.338)         &     (0.128)         &     (0.217)         &     (0.204)         &     (0.219)         \\
 [1em]
-year\_independence&                     &                     &                     &                     &                     &                     &     0.00357         &                     \\
-            &                     &                     &                     &                     &                     &                     &    (0.0163)         &                     \\
+ruggedness  &    0.000708         &    -0.00137\sym{***}&   0.0000564         &  -0.0000544         &  -0.0000783         \\
+            &   (0.00167)         &  (0.000140)         &   (0.00111)         &   (0.00103)         &   (0.00114)         \\
 [1em]
-multiple    &                     &                     &                     &                     &                     &                     &                     &       0.302         \\
-            &                     &                     &                     &                     &                     &                     &                     &     (0.298)         \\
+lpd1500s    &     -0.0537         &    -0.00259         &      -0.156\sym{***}&      -0.171\sym{**} &      -0.158\sym{***}\\
+            &    (0.0725)         &     (0.122)         &    (0.0361)         &    (0.0468)         &    (0.0365)         \\
 [1em]
-\_cons      &      -3.113         &       1.073         &       2.713         &      -1.469         &       2.258         &      -3.357         &      -3.759         &      -3.064         \\
-            &     (2.816)         &     (2.913)         &     (3.072)         &     (2.871)         &     (2.215)         &     (2.667)         &     (33.59)         &     (2.767)         \\
+2.first\_colonizer&                     &           0         &                     &                     &                     \\
+            &                     &         (.)         &                     &                     &                     \\
+[1em]
+3.first\_colonizer&                     &      -0.965\sym{***}&                     &                     &                     \\
+            &                     &     (0.115)         &                     &                     &                     \\
+[1em]
+4.first\_colonizer&                     &       0.710\sym{**} &                     &                     &                     \\
+            &                     &     (0.253)         &                     &                     &                     \\
+[1em]
+5.first\_colonizer&                     &      -0.260         &                     &                     &                     \\
+            &                     &     (1.261)         &                     &                     &                     \\
+[1em]
+7.first\_colonizer&                     &      -1.226         &                     &                     &                     \\
+            &                     &     (0.779)         &                     &                     &                     \\
+[1em]
+8.first\_colonizer&                     &       0.539         &                     &                     &                     \\
+            &                     &     (1.707)         &                     &                     &                     \\
+[1em]
+hiel\_indep  &                     &                     &       0.218         &                     &       0.122         \\
+            &                     &                     &     (0.181)         &                     &     (0.214)         \\
+[1em]
+year\_independence&                     &                     &    -0.00652\sym{**} &                     &                     \\
+            &                     &                     &   (0.00186)         &                     &                     \\
+[1em]
+1.colonizer\_indep&                     &                     &           0         &           0         &           0         \\
+            &                     &                     &         (.)         &         (.)         &         (.)         \\
+[1em]
+2.colonizer\_indep&                     &                     &      -0.142         &      -0.365\sym{**} &      -0.195         \\
+            &                     &                     &     (0.147)         &    (0.0935)         &     (0.145)         \\
+[1em]
+3.colonizer\_indep&                     &                     &      -0.664\sym{***}&      -0.884\sym{***}&      -0.700\sym{***}\\
+            &                     &                     &     (0.100)         &     (0.159)         &     (0.107)         \\
+[1em]
+4.colonizer\_indep&                     &                     &      -0.666\sym{***}&      -0.745\sym{***}&      -0.713\sym{***}\\
+            &                     &                     &     (0.130)         &     (0.160)         &     (0.137)         \\
+[1em]
+5.colonizer\_indep&                     &                     &      -0.360         &      -0.870\sym{***}&      -0.460         \\
+            &                     &                     &     (0.349)         &     (0.111)         &     (0.358)         \\
+[1em]
+6.colonizer\_indep&                     &                     &       0.415         &      -0.101         &       0.275         \\
+            &                     &                     &     (0.509)         &     (0.164)         &     (0.521)         \\
+[1em]
+postwar     &                     &                     &                     &      -0.451\sym{**} &                     \\
+            &                     &                     &                     &     (0.148)         &                     \\
+[1em]
+0.postwar   &                     &                     &                     &                     &           0         \\
+            &                     &                     &                     &                     &         (.)         \\
+[1em]
+1.postwar   &                     &                     &                     &                     &      -1.228\sym{**} \\
+            &                     &                     &                     &                     &     (0.381)         \\
+[1em]
+0.postwar#c.hiel\_indep&                     &                     &                     &                     &           0         \\
+            &                     &                     &                     &                     &         (.)         \\
+[1em]
+1.postwar#c.hiel\_indep&                     &                     &                     &                     &       0.117\sym{*}  \\
+            &                     &                     &                     &                     &    (0.0571)         \\
+[1em]
+\_cons      &       56.91\sym{**} &       77.91\sym{***}&       17.65\sym{***}&       7.259\sym{***}&       6.007\sym{**} \\
+            &     (19.03)         &     (15.86)         &     (2.498)         &     (0.201)         &     (1.877)         \\
 \hline
-\(N\)       &          54         &          37         &          22         &          48         &          54         &          45         &          54         &          54         \\
-\(R^{2}\)   &       0.203         &       0.068         &       0.035         &       0.145         &       0.517         &       0.465         &       0.258         &       0.221         \\
+\(N\)       &          40         &          34         &          66         &          66         &          66         \\
+\(R^{2}\)   &       0.283         &       0.517         &       0.581         &       0.576         &       0.580         \\
 \hline\hline
-\multicolumn{9}{l}{\footnotesize Standard errors in parentheses}\\
-\multicolumn{9}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
+\multicolumn{6}{l}{\footnotesize Standard errors in parentheses}\\
+\multicolumn{6}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
 \end{tabular}
 }
